--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -6,7 +6,7 @@
 
 .header
 	.wrap
-		a.logotype-holder(href='index.html')
+		a.logotype-holder(href='test.html')
 			// here is for SEO
 			.logo.logo-ru.invisible Justicon
 			img(src="http://justicon.ua/bitrix/templates/usticon/i/logo.png", alt="Justicon")
@@ -256,7 +256,7 @@
 						.block-item
 							.title Архив
 			li
-				a(href='/pro-bono/')
+				a(href='about.html')
 					span Про BONO
 		.search
 			#title-search
