--- a/src/partials/scripts.jade
+++ b/src/partials/scripts.jade
@@ -1,5 +1,6 @@
 script(src='vendor/jquery/dist/jquery.js')
 script(src='vendor/jquery.browser/dist/jquery.browser.min.js')
+script(src='vendor/bootstrap/dist/js/bootstrap.min.js')
 script(src='vendor/smoothscroll-for-websites/SmoothScroll.js')
 script(src='vendor/wow/dist/wow.js')
 script(src='vendor/owl.carousel/src/js/owl.carousel.js')
