--- a/src/test.jade
+++ b/src/test.jade
@@ -39,5 +39,8 @@ html(lang='en')
 							li
 								a(href="press.html")
 									span Пресс-центр
+							li
+								a(href="more.html")
+									span Услуга
 
 	include ./partials/scripts.jade
