--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -134,87 +134,10 @@
 				a(href='/')
 					img(src='/bitrix/templates/usticon/i/sprites/smlogo.png')
 			li
+				svg(version="1.1" x="0px" y="0px" viewBox="0 0 12 13" enable-background="new 0 0 12 13" xml:space="preserve")
+					path(fill="#ffffff" d="M0,12.3L0.7,13L7,6.5l0,0l0,0L0.7,0L0,0.7l5.7,5.8L0,12.3z M5,12.3L5.7,13L12,6.5l0,0 l0,0L5.7,0L5,0.7l5.7,5.8L5,12.3z")
 				a(href='/uslugi/')
 					span Услуги
-				.submenu.hidden
-					a.close(href='#')
-					.inner
-						.block-item
-							.title Корпоративные правоотношения
-							ul
-								li
-									a(href='/uslugi/korp/registratsiya/') Регистрация
-								li
-									a(href='/uslugi/korp/izmeneniya/') Изменения
-								li
-									a(href='/uslugi/korp/likvidatsiya/') Ликвидация
-								li
-									a(href='/uslugi/korp/soputstv/') Сопутствующие и дополнительные услуги
-							.title Лицензии, разрешения, сертификация
-							ul
-								li
-									a(href='/uslugi/lits/litsenzii/') Лицензии
-								li
-									a(href='/uslugi/lits/razresheniya/') Разрешения
-								li
-									a(href='/uslugi/lits/sertifikatsiya/') Сертификация
-						.block-item
-							.title Судебная практика
-							ul
-								li
-									a(href='/uslugi/sud/predst/') Представительство интересов в судах
-								li
-									a(href='/uslugi/sud/ispoln/') Представительство в исполнительном производстве
-								li
-									a(href='/uslugi/sud/dolg/') Возврат долгов
-								li
-									a(href='/uslugi/sud/praktiki/') Судебные практики
-							.title Недвижимость, строительство, земельное право
-							ul
-								li
-									a(href='/uslugi/zem/nedv/') Недвижимость
-								li
-									a(href='/uslugi/zem/stroi/') Строительство
-								li
-									a(href='/uslugi/zem/zem-pr/') Земельное право
-						.block-item
-							.title Миграционное право
-							ul
-								li
-									a(href='/uslugi/migr/immigr/') Иммиграция в Украину
-								li
-									a(href='/uslugi/migr/emigr/') Эмиграция из Украины
-								li
-									a(href='/uslugi/migr/soputstv-uslugi/') Сопутствующие услуги
-							.title Интеллектуальное право
-							ul
-								li
-									a(href='/uslugi/int/reg/') Регистрация торговых марок
-								li
-									a(href='/uslugi/int/patent/') Патентование устройств, способов, веществ, внешнего вида изделия
-								li
-									a(href='/uslugi/int/avtor/') Авторское право
-						.block-item
-							.title Абонентское обслуживание
-							ul
-								li
-									a(href='/uslugi/abon/a-y/') Абонентское юридическое обслуживание
-								li
-									a(href='/uslugi/abon/b-u/') Бухгалтерские услуги. Аутсорсинг
-								li
-									a(href='/uslugi/abon/d-b/') Дополнительные бухгалтерские услуги
-								li
-									a(href='/uslugi/abon/k-s/') Кадровое сопровождение
-							.title Налоговый и юридический консалтинг. Антимонопольное право
-							ul
-								li
-									a(href='/uslugi/konsalting/nalog/') Налоговый консалтинг
-								li
-									a(href='/uslugi/konsalting/yur/') Юридический консалтинг
-								li
-									a(href='/uslugi/konsalting/antimonopolnoe-pravo/') Антимонопольное право
-								li
-									a(href='/uslugi/konsalting/tamozhenno-brokerskie-uslugi/') Таможенно-брокерские услуги
 			li
 				a(href='price-list.html')
 					span Прайс-лист
