--- a/src/test.jade
+++ b/src/test.jade
@@ -13,7 +13,7 @@ html(lang='en')
 					.popup-navigation
 						ul.navigation-pannel
 							li
-								a(href="main.html")
+								a(href="index.html")
 									span Главная
 							li
 								a(href="about.html")
