--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -159,12 +159,15 @@ body > .menu
 			& > li:nth-child(2)
 				position: relative
 				svg, img
+					display: block
 					position: absolute
+					margin-top: -6px
 					top: 50%
 					left: -20px
-					height: 14px
-					width: 14px
+					height: 12px
+					width: 12px
 					transform: rotateZ(0deg)
+					transition: transform .5s
 				&.opened
 					&, a
 						color: $main-color
