bootstrap tabs imp.

--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -45,6 +45,7 @@
 	overflow: hidden
 	width: 80px
 	padding-top: 66px
+	padding-top: 40px
 	transition: width .6s, left .6s
 	z-index: 2
 	height: calc(100vh - 50px)
