--- a/src/partials/head.jade
+++ b/src/partials/head.jade
@@ -39,7 +39,8 @@ meta(name="msapplication-TileColor" content="#da532c")
 meta(name="msapplication-TileImage" content="mstile-144x144.png")
 meta(name="theme-color" content="#ffffff")
 
-link(rel='stylesheet', href='vendor/normalize-css/normalize.css')
+//- link(rel='stylesheet', href='vendor/normalize-css/normalize.css')
+link(rel='stylesheet', href='vendor/bootstrap/dist/css/bootstrap.min.css')
 link(rel='stylesheet', href='vendor/font-awesome/css/font-awesome.min.css')
 link(rel='stylesheet', href='vendor/animate.css/animate.css')
 link(rel='stylesheet', href='vendor/owl.carousel/src/css/owl.carousel.css')
