--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -190,7 +190,7 @@
 
 .navigation-sidebar#navigation-sidebar(class= page === 'main' ? 'mainpage' : '')
 	.nicescroll.sidebar-expanded.sidebar-wrapper
-		a.nav-header-btn.text-center.toggle-nav-collapse(title='Open/Close', href='#')
+		a.nav-header-btn.text-center.toggle-nav-collapse.hidden(title='Open/Close', href='#')
 			span.sr-only Toggle navigation
 			svg(version='1.1', xmlns:svgjs='http://svgjs.com/svgjs', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 12 13', enable-background='new 0 0 12 13', xml:space='preserve')
 				path(fill='#243E57', d='M0,12.3L0.7,13L7,6.5l0,0l0,0L0.7,0L0,0.7l5.7,5.8L0,12.3z M5,12.3L5.7,13L12,6.5l0,0\
