--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -67,6 +67,12 @@
 	height: 0
 	clear: both
 
+.tab-content
+	& > .tab-pane
+		display: none
+		&.active
+			display: block
+
 .gamburger
 	height: 50px
 	padding: 14px
@@ -2136,6 +2142,17 @@ body > .menu
 
 
 .breadcrumb
+	@media (max-width: $tablet)
+		padding: 0 20px
+	&, a
+		color: #999
+		font-size: 11px
+		font-weight: 400
+		line-height: 2.5em
+		margin: 10px 0
+	& > *
+		display: inline-block
+		margin-right: 6px
 
 .service-tab-buttons
 	margin: -40px 0 40px
@@ -2241,4 +2258,60 @@ body > .menu
 
 .service-page-content
 	@media (max-width: $tablet)
-			padding: 0 20px
+		padding: 0 20px
+	&, p, span
+		color: #666
+		font-size: 14px
+		font-weight: 400
+		line-height: 1.5em
+	%pseudos
+		display: inline-block
+		border-radius: 50%
+		text-align: center
+		width: 50px
+		height: 50px
+		line-height: 50px
+		background-color: #6bb6ee
+		border: 4px solid #6bb6ee
+		color: white
+		font-size: 38px
+		font-weight: 300
+		margin-right: 10px
+		vertical-align: top
+	h1, h2, h3, h4
+		color: #243e57
+		font-size: 28px
+		font-weight: 300
+		line-height: 1.5em
+		vertical-align: top
+	.service-page-task
+		h1, h2, h3, h4
+			margin-top: 20px
+			&:before
+				@extend %pseudos
+				content: '?'
+			& + p
+				margin-top: -20px
+		p
+			padding-left: 70px
+	.service-page-optimal
+		h1, h2, h3, h4
+			margin-top: 20px
+			&:before
+				@extend %pseudos
+				content: '!'
+			& + p
+				margin-top: -20px
+		p
+			padding-left: 70px
+		ul
+			padding-left: 100px
+			li
+				&:before
+					content: ''
+					display: inline-block
+					margin-right: 10px
+					background: url('../img/icons/list-done-1.svg') 50% 50% no-repeat
+					background-size: contain
+					height: 12px
+					width: 12px
