--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -2259,54 +2259,51 @@ body > .menu
 .service-page-content
 	@media (max-width: $tablet)
 		padding: 0 20px
+	.tab-pane
+		margin-bottom: 40px
 	&, p, span
 		color: #666
 		font-size: 14px
 		font-weight: 400
 		line-height: 1.5em
 	%pseudos
-		display: inline-block
-		border-radius: 50%
-		text-align: center
-		width: 50px
-		height: 50px
-		line-height: 50px
-		background-color: #6bb6ee
-		border: 4px solid #6bb6ee
-		color: white
-		font-size: 38px
-		font-weight: 300
-		margin-right: 10px
-		vertical-align: top
+		&:before
+			display: inline-block
+			border-radius: 50%
+			text-align: center
+			width: 50px
+			height: 50px
+			line-height: 50px
+			background-color: #6bb6ee
+			border: 4px solid #6bb6ee
+			color: white
+			font-size: 38px
+			font-weight: 300
+			margin-right: 10px
+			vertical-align: top
+		& + p
+			margin-top: -10px
 	h1, h2, h3, h4
 		color: #243e57
 		font-size: 28px
 		font-weight: 300
 		line-height: 1.5em
 		vertical-align: top
-	.service-page-task
+	.service-page-task,
+	.service-page-optimal,
+	.service-page-advantages,
+	.service-page-important,
+	.service-page-law,
+	.service-page-base
 		h1, h2, h3, h4
 			margin-top: 20px
-			&:before
-				@extend %pseudos
-				content: '?'
-			& + p
-				margin-top: -20px
-		p
-			padding-left: 70px
-	.service-page-optimal
-		h1, h2, h3, h4
-			margin-top: 20px
-			&:before
-				@extend %pseudos
-				content: '!'
-			& + p
-				margin-top: -20px
+			@extend %pseudos
 		p
 			padding-left: 70px
 		ul
 			padding-left: 100px
 			li
+				margin: 10px 0
 				&:before
 					content: ''
 					display: inline-block
@@ -2315,3 +2312,27 @@ body > .menu
 					background-size: contain
 					height: 12px
 					width: 12px
+	.service-page-task
+		h1, h2, h3, h4
+			&:before
+				content: '?'
+	.service-page-optimal
+		h1, h2, h3, h4
+			&:before
+				content: '!'
+	.service-page-advantages
+		h1, h2, h3, h4
+			&:before
+				content: '+'
+	.service-page-important
+		h1, h2, h3, h4
+			&:before
+				content: '!'
+	.service-page-law
+		h1, h2, h3, h4
+			&:before
+				content: '§'
+	.service-page-base
+		h1, h2, h3, h4
+			&:before
+				content: 'Ξ'
