--- a/src/more.jade
+++ b/src/more.jade
@@ -74,13 +74,12 @@ html(lang='en')
 								b
 									| Заказав у нас услугу представительства интересов в исполнительном производстве, Вы получаете ряд преимуществ:
 							p
-							div
-								ul
-									li Представительство интересов осуществляется опытными специалистами 
-									li Вы не тратите свое время на постоянное общение с исполнителями 
-									li Возможность повлиять на ход исполнения решения 
-									li Высокие шансы на получение нужного Вам результата 
-								|  Если Вы получили решение суда, следующим этапом будет его выполнение. Вы можете - либо заниматься этим самостоятельно, либо заказать сопровождение этого процесса у специалистов с опытом работы и пониманием законодательства. Мы не отговариваем Вас от первого варианта, но
+							ul
+								li Представительство интересов осуществляется опытными специалистами 
+								li Вы не тратите свое время на постоянное общение с исполнителями 
+								li Возможность повлиять на ход исполнения решения 
+								li Высокие шансы на получение нужного Вам результата 
+							p Если Вы получили решение суда, следующим этапом будет его выполнение. Вы можете - либо заниматься этим самостоятельно, либо заказать сопровождение этого процесса у специалистов с опытом работы и пониманием законодательства. Мы не отговариваем Вас от первого варианта, но
 							p
 								b Самостоятельное участие в исполнительном производстве это: 
 							p
@@ -97,16 +96,14 @@ html(lang='en')
 								i
 									font(color='#0054A5') –
 									|  "Риск ошибки в процедуре выполнения судебного решения"
-							p(align='left')
-								font(color='#0054A5', size='4')
-									b
-										font(color='#FF0000')
-											br
-							p(align='left')
-								font(color='#0054A5', size='4')
-									b
-										font(color='#FF0000') + 
-										| РАБОТЫ С НАМИ
+							.info-block
+								h3 Примечание
+								p
+									b Организация бизнеса в виде Общества с ограниченной ответственностью имеет ряд преимуществ:
+								p Процедура регистрации крайне простая и недорогостоящая Отсутствует необходимость подавать специальную отчетность, как в АО
+								p Размер уставного капитала не регламентирован и определяется исключительно по решению учредителей Максимальное количество учредителей – 100 человек
+						.service-page-advantages
+							h2 РАБОТЫ С НАМИ
 							p(align='justify')
 								font(size='4')
 									b Закажите у нас, потому что: 
@@ -120,56 +117,39 @@ html(lang='en')
 										| При исполнении решений судов не последнюю роль играет практика общения с сотрудниками исполнительной службы, и она у нас есть
 									li Мы предоставим первичную консультацию бесплатно 
 									li И наконец-то лучшая характеристика нашей работы - это наши клиенты 
-								font(color='#0054A5', size='4')
-									b
-										| Предоставьте общение с исполнительной службой нашим специалистам, и мы гарантированно достигнем результата!
+							p(color='#0054A5')
+								b
+									| Предоставьте общение с исполнительной службой нашим специалистам, и мы гарантированно достигнем результата!
 					.tab-pane#tbd7
 						.tabpl Подробно
-						div(align='justify')
+						p
 							| Исполнительное производство как завершающая стадия судебного производства и принудительное выполнение решений других органов (должностных лиц) – это совокупность действий органов и должностных лиц, определенных в Законе Украины «Об исполнительном производстве», направленных на принудительное выполнение решений судов и других органов.
-						p(align='justify')
+						p
 							| Получение положительного для Вас решения суда, не всегда означает автоматическое достижение поставленной судебным разбирательством цели. Судебное решение не исполняется само по себе, а получение исполнительного документа, как показывает практика, только начало пути к исполнению судебного решения. Даже простой контроль исполнения занимает много времени, нервов и сил. Мы готовы сберечь Ваше время и получить тот результат, ради которого Вы обращались в суд.
-						p(align='justify')
+						p
 							| Наши специалисты грамотно составят заявление об открытии исполнительного производства, проведут переговоры с государственным исполнителем, который будет вести исполнительное производство, а также будут контролировать ход исполнения исполнительного документа. Работа наших специалистов не позволит «потеряться» Вашему делу среди множества исполнительных производств находящихся у исполнителя в производстве.
-						p(align='left')
-							font(color='#0054A5', size='4')
-								b
-									font(color='#FF0000')
-										br
-						p(align='left')
-							font(color='#0054A5', size='4')
-								b
-									font(color='#FF0000') !!! 
-									| ВАЖНО
-						p(align='justify')  
-						div(align='justify')
-							ul
-								li
-									| Наличие положительного судебного решения не гарантирует его выполнения. Успех в получении нужного Вам результата зависит от множества факторов, основным из которых является постоянный контроль и общение с исполнителем, а также участие при проведении исполнительных действий.
-								li Исполнительный документ имеет ограниченный срок для предъявления. 
-							div(align='left')
-								font(color='#0054A5', size='4')
-									b
-										font(color='#FF0000')
-											br
-											|          і
-										| ПРИМЕЧАНИЕ
-						p(align='justify')  
-						div(align='justify')
-							ul
-								li
-									| Наша компания не только представляет интересы кредитора, но также может участвовать в исполнительном производстве на стороне должника.
-								li
-									| Для начала нашего сотрудничества Вам необходимо предоставить нам все имеющиеся у Вас документы и информацию, касающиеся исполнительного производства.
-							div(align='left')
-								font(color='#0054A5', size='4')
-									b
-										font(color='#FF0000')
-											br
-											|          §
-										| ЗАКОНОДАТЕЛЬСТВО
-						p(align='justify')  
-						div(align='justify')
+						.service-page-important
+							h2 ВАЖНО
+							p
+								ul
+									li
+										| Наличие положительного судебного решения не гарантирует его выполнения. Успех в получении нужного Вам результата зависит от множества факторов, основным из которых является постоянный контроль и общение с исполнителем, а также участие при проведении исполнительных действий.
+									li Исполнительный документ имеет ограниченный срок для предъявления. 
+								div(align='left')
+									font(color='#0054A5', size='4')
+										b
+											font(color='#FF0000')
+												br
+												|          і
+											| ПРИМЕЧАНИЕ
+							p
+								ul
+									li
+										| Наша компания не только представляет интересы кредитора, но также может участвовать в исполнительном производстве на стороне должника.
+									li
+										| Для начала нашего сотрудничества Вам необходимо предоставить нам все имеющиеся у Вас документы и информацию, касающиеся исполнительного производства.
+						.service-page-law
+							h2 ЗАКОНОДАТЕЛЬСТВО
 							ul
 								li
 									b Закон Украины «Об исполнительном производстве» 
@@ -179,22 +159,11 @@ html(lang='en')
 								li
 									b
 										| Приказ Министерства юстиции Украины от 02.04.2012 г. № 512/5 «Об утверждении инструкции по организации принудительного исполнения решений»
-							font(size='4')
+							p
 								b
 									| Юридическая компания «ЮСТИКОН», имея многолетний опыт и обширную практику, предлагает Вам полный комплекс юридических услуг по сопровождению исполнения решений судов в Украине.
-						p(align='left')
-							font(color='#0054A5', size='4')
-								b
-									font(color='#FF0000')
-										br
-						p(align='left')
-							font(color='#0054A5', size='4')
-								b
-									font(color='#FF0000') Ξ 
-									| ПЕРЕЧЕНЬ БАЗОВЫХ УСЛУГ
-						p
-						p(align='justify')  
-						div(align='justify')
+						.service-page-base
+							h2 ПЕРЕЧЕНЬ БАЗОВЫХ УСЛУГ
 							ul
 								li анализ материалов и подготовка юридического заключения; 
 								li
