--- a/src/more.jade
+++ b/src/more.jade
@@ -57,123 +57,128 @@ html(lang='en')
 			.main-container.service-page-content
 				.tab-content
 					.tab-pane#tbd1.active
-						.service-page-task
-							h2 ЗАДАЧА
-							p.
-								Вы получили решение суда, но не знаете, что делать дальше?! 
-								У Вас есть необходимость выполнить решение иностранного суда?! 
-								Пришло постановление об открытии исполнительного производства в отношении Вас как должника?!
-								Исполнительное производство «стоит на месте» и нет результата?! 
-						.service-page-optimal
-							h2 ОПТИМАЛЬНОЕ РЕШЕНИЕ
-							p
-								b
-									| В такой ситуации, лучшим решением будет привлечение опытных специалистов для представительства Ваших интересов в исполнительном производстве!
-							p
-								| Участие в исполнительном производстве - финишная прямая получения нужного Вам результата в процессе защиты Ваших интересов и прав!
-								b
-									| Заказав у нас услугу представительства интересов в исполнительном производстве, Вы получаете ряд преимуществ:
-							p
-							ul
-								li Представительство интересов осуществляется опытными специалистами 
-								li Вы не тратите свое время на постоянное общение с исполнителями 
-								li Возможность повлиять на ход исполнения решения 
-								li Высокие шансы на получение нужного Вам результата 
-							p Если Вы получили решение суда, следующим этапом будет его выполнение. Вы можете - либо заниматься этим самостоятельно, либо заказать сопровождение этого процесса у специалистов с опытом работы и пониманием законодательства. Мы не отговариваем Вас от первого варианта, но
-							p
-								b Самостоятельное участие в исполнительном производстве это: 
-							p
+						h2
+							i ?
+							| ЗАДАЧА
+						p.
+							Вы получили решение суда, но не знаете, что делать дальше?! 
+							У Вас есть необходимость выполнить решение иностранного суда?! 
+							Пришло постановление об открытии исполнительного производства в отношении Вас как должника?!
+							Исполнительное производство «стоит на месте» и нет результата?! 
+						h2
+							i !
+							| ОПТИМАЛЬНОЕ РЕШЕНИЕ
+						p
+							b
+								| В такой ситуации, лучшим решением будет привлечение опытных специалистов для представительства Ваших интересов в исполнительном производстве!
+						p
+							| Участие в исполнительном производстве - финишная прямая получения нужного Вам результата в процессе защиты Ваших интересов и прав!
+							b
+								| Заказав у нас услугу представительства интересов в исполнительном производстве, Вы получаете ряд преимуществ:
+						p
+						ul
+							li Представительство интересов осуществляется опытными специалистами 
+							li Вы не тратите свое время на постоянное общение с исполнителями 
+							li Возможность повлиять на ход исполнения решения 
+							li Высокие шансы на получение нужного Вам результата 
+						p Если Вы получили решение суда, следующим этапом будет его выполнение. Вы можете - либо заниматься этим самостоятельно, либо заказать сопровождение этого процесса у специалистов с опытом работы и пониманием законодательства. Мы не отговариваем Вас от первого варианта, но
+						p
+							b Самостоятельное участие в исполнительном производстве это: 
+						p
+							font(color='#0054A5') –
+							i  "Риск утери исполнительного дела " 
+						p
+							i
 								font(color='#0054A5') –
-								i  "Риск утери исполнительного дела " 
+								|  "Возможность затягивания исполнительного производства "
+						p
+							i
+								| – "Вариант не выполнения судебного решения"
+						p
+							i
+								font(color='#0054A5') –
+								|  "Риск ошибки в процедуре выполнения судебного решения"
+						.info-block
+							h3 Примечание
 							p
-								i
-									font(color='#0054A5') –
-									|  "Возможность затягивания исполнительного производства "
-							p
-								i
-									| – "Вариант не выполнения судебного решения"
-							p
-								i
-									font(color='#0054A5') –
-									|  "Риск ошибки в процедуре выполнения судебного решения"
-							.info-block
-								h3 Примечание
-								p
-									b Организация бизнеса в виде Общества с ограниченной ответственностью имеет ряд преимуществ:
-								p Процедура регистрации крайне простая и недорогостоящая Отсутствует необходимость подавать специальную отчетность, как в АО
-								p Размер уставного капитала не регламентирован и определяется исключительно по решению учредителей Максимальное количество учредителей – 100 человек
-						.service-page-advantages
-							h2 РАБОТЫ С НАМИ
-							p(align='justify')
-								font(size='4')
-									b Закажите у нас, потому что: 
-							p(align='justify')  
-							div(align='justify')
-								ul
-									li Наша компания предоставляет услуги в данной сфере уже более 7-ти лет 
-									li
-										| Наши юристы в дополнение к юридическому образованию изучили практическую сторону вопроса
-									li
-										| При исполнении решений судов не последнюю роль играет практика общения с сотрудниками исполнительной службы, и она у нас есть
-									li Мы предоставим первичную консультацию бесплатно 
-									li И наконец-то лучшая характеристика нашей работы - это наши клиенты 
-							p(color='#0054A5')
-								b
-									| Предоставьте общение с исполнительной службой нашим специалистам, и мы гарантированно достигнем результата!
+								b Организация бизнеса в виде Общества с ограниченной ответственностью имеет ряд преимуществ:
+							p Процедура регистрации крайне простая и недорогостоящая Отсутствует необходимость подавать специальную отчетность, как в АО
+							p Размер уставного капитала не регламентирован и определяется исключительно по решению учредителей Максимальное количество учредителей – 100 человек
+						h2
+							i +
+							| РАБОТЫ С НАМИ
+						p(align='justify')
+							font(size='4')
+								b Закажите у нас, потому что: 
+						p(align='justify')  
+						div(align='justify')
+							ul
+								li Наша компания предоставляет услуги в данной сфере уже более 7-ти лет 
+								li
+									| Наши юристы в дополнение к юридическому образованию изучили практическую сторону вопроса
+								li
+									| При исполнении решений судов не последнюю роль играет практика общения с сотрудниками исполнительной службы, и она у нас есть
+								li Мы предоставим первичную консультацию бесплатно 
+								li И наконец-то лучшая характеристика нашей работы - это наши клиенты 
+						p(color='#0054A5')
+							b
+								| Предоставьте общение с исполнительной службой нашим специалистам, и мы гарантированно достигнем результата!
 					.tab-pane#tbd7
-						.tabpl Подробно
+						h2
+							i +
+							| ПОДРОБНО
 						p
 							| Исполнительное производство как завершающая стадия судебного производства и принудительное выполнение решений других органов (должностных лиц) – это совокупность действий органов и должностных лиц, определенных в Законе Украины «Об исполнительном производстве», направленных на принудительное выполнение решений судов и других органов.
 						p
 							| Получение положительного для Вас решения суда, не всегда означает автоматическое достижение поставленной судебным разбирательством цели. Судебное решение не исполняется само по себе, а получение исполнительного документа, как показывает практика, только начало пути к исполнению судебного решения. Даже простой контроль исполнения занимает много времени, нервов и сил. Мы готовы сберечь Ваше время и получить тот результат, ради которого Вы обращались в суд.
 						p
 							| Наши специалисты грамотно составят заявление об открытии исполнительного производства, проведут переговоры с государственным исполнителем, который будет вести исполнительное производство, а также будут контролировать ход исполнения исполнительного документа. Работа наших специалистов не позволит «потеряться» Вашему делу среди множества исполнительных производств находящихся у исполнителя в производстве.
-						.service-page-important
-							h2 ВАЖНО
-							p
-								ul
-									li
-										| Наличие положительного судебного решения не гарантирует его выполнения. Успех в получении нужного Вам результата зависит от множества факторов, основным из которых является постоянный контроль и общение с исполнителем, а также участие при проведении исполнительных действий.
-									li Исполнительный документ имеет ограниченный срок для предъявления. 
-								div(align='left')
-									font(color='#0054A5', size='4')
-										b
-											font(color='#FF0000')
-												br
-												|          і
-											| ПРИМЕЧАНИЕ
-							p
-								ul
-									li
-										| Наша компания не только представляет интересы кредитора, но также может участвовать в исполнительном производстве на стороне должника.
-									li
-										| Для начала нашего сотрудничества Вам необходимо предоставить нам все имеющиеся у Вас документы и информацию, касающиеся исполнительного производства.
-						.service-page-law
-							h2 ЗАКОНОДАТЕЛЬСТВО
+						h2
+							i !
+							| ВАЖНО
+						p
 							ul
 								li
-									b Закон Украины «Об исполнительном производстве» 
+									| Наличие положительного судебного решения не гарантирует его выполнения. Успех в получении нужного Вам результата зависит от множества факторов, основным из которых является постоянный контроль и общение с исполнителем, а также участие при проведении исполнительных действий.
+								li Исполнительный документ имеет ограниченный срок для предъявления. 
+						h2
+							i і
+							| ПРИМЕЧАНИЕ
+						p
+							ul
 								li
-									b
-										| Приказ Министерства юстиции Украины от 15.12.1999 г. № 74/5 «Об утверждении инструкции о порядке осуществления исполнительных действий»
+									| Наша компания не только представляет интересы кредитора, но также может участвовать в исполнительном производстве на стороне должника.
 								li
-									b
-										| Приказ Министерства юстиции Украины от 02.04.2012 г. № 512/5 «Об утверждении инструкции по организации принудительного исполнения решений»
-							p
+									| Для начала нашего сотрудничества Вам необходимо предоставить нам все имеющиеся у Вас документы и информацию, касающиеся исполнительного производства.
+						h2
+							i §
+							| ЗАКОНОДАТЕЛЬСТВО
+						ul
+							li
+								b Закон Украины «Об исполнительном производстве» 
+							li
 								b
-									| Юридическая компания «ЮСТИКОН», имея многолетний опыт и обширную практику, предлагает Вам полный комплекс юридических услуг по сопровождению исполнения решений судов в Украине.
-						.service-page-base
-							h2 ПЕРЕЧЕНЬ БАЗОВЫХ УСЛУГ
-							ul
-								li анализ материалов и подготовка юридического заключения; 
-								li
-									| составление заявления и подготовка документов для обращения в исполнительную службу;
-								li
-									| участие в исполнительных действиях (наложение ареста (опись), выезд на место нахождения должника, розыск должника, реализация имущества, выселение, принудительное вхождение);
-								li составление документов (жалоба, заявление, возражение, отвод и др.). 
+									| Приказ Министерства юстиции Украины от 15.12.1999 г. № 74/5 «Об утверждении инструкции о порядке осуществления исполнительных действий»
+							li
+								b
+									| Приказ Министерства юстиции Украины от 02.04.2012 г. № 512/5 «Об утверждении инструкции по организации принудительного исполнения решений»
+						p
+							b
+								| Юридическая компания «ЮСТИКОН», имея многолетний опыт и обширную практику, предлагает Вам полный комплекс юридических услуг по сопровождению исполнения решений судов в Украине.
+						h2
+							i Ξ
+							| ПЕРЕЧЕНЬ БАЗОВЫХ УСЛУГ
+						ul
+							li анализ материалов и подготовка юридического заключения; 
+							li
+								| составление заявления и подготовка документов для обращения в исполнительную службу;
+							li
+								| участие в исполнительных действиях (наложение ареста (опись), выезд на место нахождения должника, розыск должника, реализация имущества, выселение, принудительное вхождение);
+							li составление документов (жалоба, заявление, возражение, отвод и др.). 
 					.tab-pane#tbd3
-						.tabpl Цены
-						div(style='margin-top: 25px')
+						h2
+							i $
+							| Цены
 						.table-holder
 							table
 								tbody
@@ -186,7 +191,7 @@ html(lang='en')
 												\nот 1000 грн.                      
 						#pricedesc
 						.mt10
-							span.bl-button.zaprosl Заказать услугу
+							a(href="#").btn Заказать услугу
 							a.view-all-price-list(href='/prays-list/')
 								| Посмотреть весь прайс-лист
 								span.arrow-down
