main page slider without scritpt

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -30,6 +30,11 @@
 	.container > .wrap, & > .footer, .wrap > .consult-me-block
 		transform: translateX(280px)
 
+.form-group
+	display: block
+	position: relative
+
+
 // .container
 // 	display: block
 // 	margin: 0 auto
@@ -784,6 +789,13 @@ body > .menu
 .partners-section
 	.controls, .paginator-holder
 		margin-top: 58px
+	.owl-carousel
+		display: block
+		font-size: 0
+		.owl-item
+			display: inline-block
+			float: none
+			vertical-align: middle
 	.label-holder
 		text-align: center
 		margin-top: 38px
@@ -881,6 +893,13 @@ body > .menu
 	.owl-item
 		display: block
 		margin-right: 0
+	.owl-carousel
+		display: block
+		font-size: 0
+		.owl-item
+			display: inline-block
+			float: none
+			vertical-align: middle
 .about-container
 	@media (max-width: $tablet)
 		padding: 0 20px
@@ -1036,28 +1055,28 @@ body > .menu
 		margin: 0
 		padding-left: 20px
 		width: 100%
+		width: calc(100% - 49px)
 		&::placeholder
 			color: #666
 			font-size: 16px
 			font-weight: 300
-		&:focus ~, &.focus ~
-			input[type="submit"], input.submit
-					transform: translateY(0)
-					transition: transform .3s
-	input[type="submit"], input.submit
+	input[type="submit"], .submit
 		display: inline-block
 		height: 49px
+		width: 49px
 		position: absolute
 		top: 0
 		right: 0
-		background: none
 		border: none
 		color: $main-color
 		font-size: 15px
 		font-weight: 700
-		transform: translateY(100%)
-		transition: transform .3s .6s
 		text-transform: uppercase
+		background:
+			color: $main-color
+			image: url('../img/icons/search-icon-1.svg')
+			position: 50% 50%
+			repeat: no-repeat
 
 // SEARCH PAGE
 .search-page
