--- a/src/index.jade
+++ b/src/index.jade
@@ -74,16 +74,6 @@ html(lang='en')
 												b 5% скидку!
 									.more
 										a.btn.btn-custom.btn-large(href='http://justicon.ua/aktsii-i-predlozheniya/skidka-na-kompleks-razreshenie-na-rabotu-vid-na-zhitelstvo.html?clear_cache=Y') Узнать больше
-						.clear
-						.swicher
-							.outer-center
-								.inner-center
-									.l-trng.fl
-									.pagination.fl
-									.r-trng.fl
-							.clear
-					.rnb(style='display: block;')
-					.clear
 
 		section.categories-section
 			.categories-content
@@ -202,7 +192,6 @@ html(lang='en')
 				.label-holder
 					h2 Нам доверяют
 				.parnters-holder
-					.lnb.disabled
 					.caroufredsel_wrapper
 						.parnters-container.owl-carousel
 							mixin partner (img, href)
@@ -376,8 +365,9 @@ html(lang='en')
 
 			form(action="#").search-input-1
 				.container
-					input.text(type='text', placeholder='Поиск')
-					input.submit(type='submit', value='найти')
+					.form-group
+						input.text(type='text', placeholder='Поиск')
+						button.submit(type='submit')
 
 
 		include ./partials/footer.jade
